translation files renamed & tab translate working correctly

--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -111,6 +111,7 @@
   "Shipping": "Envio",
   "Continue": "Continar",
   "Home": "Início",
+  "Profile": "Perfil",
   "UrbanKitchen": "Cozinha Urbana",
   "Product": "Produto",
   "OUTOFSTOCK": "EM FALTA",
