basic login & cart & app & settings translations added

--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -27,7 +27,7 @@
   "RegisterAccount": "Registrar-se",
   "Cancel": "Cancelar",
   "LogIn": "Acessar",
-  "Shop": "Comprar",
+  "Shop": "Shopping",
   "ProductName": "Nome do Produto",
   "SameForShipping": "O mesmo para envio",
   "Signup": "Cadastrar-me",
